@@ -1253,7 +1253,11 @@ class Nag_Api extends Horde_Registry_Api
         $tasks->reset();
         while ($task = $tasks->each()) {
             // If there's no due date, it's not a time object.
-            if (!$task->due || $task->due + 1 < $start_ts || $task->due > $end_ts) {
+            if (!$task->due ||
+                $task->due > $end_ts ||
+                (!$task->recurs() && $task->due + 1 < $start_ts) ||
+                ($task->recurs() && $task->recurrence->getRecurEnd() &&
+                 $task->recurrence->getRecurEnd()->timestamp() + 1 < $start_ts)) {
                 continue;
             }
             $due_date = date('Y-m-d\TH:i:s', $task->due);
