@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix listing of recurring tasks via timeobjects API.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1236,7 +1236,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix listing of recurring tasks via timeobjects API.
    </notes>
   </release>
  </changelog>
