@@ -2,6 +2,7 @@
 v4.0.1-git
 ----------
 
+[jan] Fix listing of recurring tasks via timeobjects API.
 
 
 ------
